# SmartCam-Linux-on-imx6ull

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile.arm  Dockerfile.arm-sysroot  README.md  求职项目-智能相机流媒体系统.md
configs/: smartcam.conf  smartcam.service  toolchain.arm.cmake
docs/: 01-display-module-implementation.md  02-cmake-build-system-tutorial.md  02-video-capture-module-implementation.md  03-mjpeg-stream-module-implementation.md  04-storage-module-implementation.md  05-control-module-implementation.md  06-common-module-implementation.md  07-video-processor-module-implementation.md  08-rtsp-module-implementation.md  09-gallery-module-implementation.md  10-settings-panel-implementation.md  11-framerate-control-implementation.md  changelog-2026-05-29.md  debug-summary.md  plan-gallery-module.md  rtsp-protocol-learning-notes.md
docs/interview/: 01-模拟面试问答-嵌入式Linux.md
include/camera/: capture.h  processor.h
include/common/: config.h  logger.h  ringbuf.h  types.h
include/display/: gallery.h  gui.h  video_player.h
include/network/: control.h  mjpeg_server.h  rtsp_server.h
include/storage/: manager.h
scripts/: build.sh  check-deps.sh  cross-build.sh  setup-sysroot.sh  setup-vm.sh  sysroot-from-board.sh  sysroot-setup.sh
src/: main.cpp
src/camera/: capture.cpp  processor.cpp  processor_neon.cpp
src/display/: gallery.cpp  gui.cpp  video_player.cpp
src/network/: control.cpp  mjpeg_server.cpp  rtsp_server.cpp
src/storage/: manager.cpp
tests/: test_protocol.cpp
